# RouteMQ

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  QUEUE_FEATURE.md  README.md  SECURITY.md  TEMPLATE.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_tests.py  setup-project.ps1  setup-project.sh  setup.py  test_queue.py
.github/: CODEOWNERS  SECURITY-TRIAGE.md  branch-protection.yml  dependabot.yml  release-drafter.yml  release-token-rotation.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  github-release.yml  publish-test.yml  publish.yml  release.yml  scorecard.yml  update-docs-summary.yml
app/: .gitignore
app/jobs/: example_data_processing_job.py  example_email_job.py  example_report_job.py
app/middleware/: rate_limit.py
app/models/: queue_failed_job.py  queue_job.py
app/routers/: devices.py
benchmarks/: README.md  __init__.py  _harness.py  conftest.py  db_matrix.py  queue_serialization.py  route_dispatch.py  test_database_queue.py  test_observability.py  test_queue_serialization.py  test_queue_worker.py  test_router.py  worker_loop_fake_driver.py
benchmarks/baselines/: .gitignore  master.json
bootstrap/: app.py
core/: controller.py  job.py  middleware.py  model.py  redis_manager.py  router.py  router_registry.py  tinker.py  worker_manager.py
core/queue/: __init__.py  database_queue.py  models.py  queue_driver.py  queue_manager.py  queue_worker.py  redis_queue.py
docs/: README.md  SUMMARY.md  architecture.md  best-practices.md  docker-deployment.md  faq.md  queue-system.md  release-conformance.md  security.md  tinker.md
docs/adr/: 0001-pypi-distribution-model.md  0002-queue-driver-registry.md  0003-docker-backed-integration-tests.md  0004-centralized-runtime-settings.md  0005-observability-stack.md  0006-pool-tuning-knobs.md  0007-benchmark-harness.md  0008-fail-fast-logging-audit.md  0009-supply-chain-and-provenance.md  0010-tsdb-driver-registry.md
docs/api-reference/: README.md  controller-api.md  health-observability-api.md  middleware-api.md  redis-manager-api.md  router-api.md  worker-manager-api.md
docs/configuration/: README.md  environment-variables.md  logging.md
docs/controllers/: README.md  best-practices.md  controller-methods.md  creating-controllers.md  database-operations.md  redis-integration.md
docs/core-concepts/: README.md  architecture.md  message-flow.md  middleware-pipeline.md  router-discovery.md  worker-processes.md
docs/database/: README.md  configuration.md  creating-models.md  operations.md
docs/deployment/: README.md  docker.md  load-balancing.md  scaling.md
docs/examples/: README.md  api-gateway.md  chat-app.md  iot-devices.md  notifications.md  sensor-data.md
docs/getting-started/: README.md  development-setup.md  first-route.md  installation.md  quick-start.md
docs/middleware/: README.md  creating-middleware.md  middleware-chains.md
docs/monitoring/: README.md  benchmarks.md  error-handling-audit.md  health-checks.md  metrics.md  mqtt-monitoring.md  pool-tuning.evidence.json  pool-tuning.md  redis-monitoring.md
docs/plans/sprints/: SPRINT-14-sha-pin-workflows.md
docs/queue/: README.md  best-practices.md  creating-jobs.md  dispatching-jobs.md  drivers.md  failed-jobs.md  getting-started.md  running-workers.md
docs/rate-limiting/: README.md  advanced-features.md  basic-rate-limiting.md  client-based.md  strategies.md  topic-specific.md
docs/redis/: README.md
docs/routing/: README.md  dynamic-loading.md  route-definition.md  route-groups.md  route-parameters.md  shared-subscriptions.md
docs/testing/: README.md  coverage.md  integration-tests.md  mocking.md  running-tests.md  unit-tests.md
docs/troubleshooting/: README.md
docs/tsdb/: README.md
routemq/: __init__.py  cli.py  health.py  job.py  job_registry.py  logging_config.py  middleware.py  model.py  mqtt_utils.py  observability.py  redis_manager.py  retry.py  router.py  router_registry.py  settings.py  tinker.py  worker_manager.py
routemq/metrics/: __init__.py  exposition.py  hooks.py  prometheus.py  registry.py
routemq/queue/: __init__.py  database_queue.py  models.py  queue_driver.py  queue_manager.py  queue_worker.py  redis_queue.py
routemq/scaffold/: __init__.py  prompts.py  scaffolder.py
routemq/scaffold/templates/base/: .env  .gitignore  README.md.j2  pyproject.toml.j2
routemq/telemetry/: __init__.py  adapter.py  runtime.py  types.py
routemq/tsdb/: __init__.py  clickhouse_driver.py  telemetry_adapters.py  telemetry_mapping.py  tsdb_driver.py  tsdb_manager.py
scripts/: README.md  update_summary.py
tests/: __init__.py
tests/integration/: helpers.py  test_mqtt_end_to_end.py  test_queue_backends.py
tests/unit/: __init__.py  test_benchmarks.py  test_cli.py  test_controller.py  test_middleware.py  test_router.py  test_tinker_rich.py
tests/unit/app/middleware/: test_rate_limit.py  test_rate_limit_strategies.py
tests/unit/app/models/: test_queue_failed_job.py  test_queue_job.py
tests/unit/bootstrap/: test_app.py  test_app_paths.py  test_telemetry_adapters.py  test_telemetry_mapping.py  test_tsdb.py
tests/unit/core/: test_database_queue.py  test_health.py  test_job.py  test_job_extra.py  test_job_registry.py  test_job_unserialize.py  test_logging_config.py  test_metrics_exposition.py  test_metrics_hooks.py  test_metrics_prometheus.py  test_metrics_registry.py  test_model.py  test_model_queries.py  test_mqtt_utils.py  test_observability.py  test_queue.py  test_queue_driver_contract.py  test_queue_manager_extra.py  test_queue_models_repr.py  test_queue_worker_extra.py  test_redis_manager.py  test_redis_queue.py  test_retry.py  test_router_registry.py  test_settings.py  test_telemetry_adapter.py  test_telemetry_runtime.py  test_telemetry_types.py  test_worker_manager.py  test_worker_manager_process.py
tests/unit/scaffold/: test_prompts.py  test_scaffolder.py
(+11 files in other folders)
