[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "routemq"
version = "0.1.0"
description = "A flexible MQTT routing framework with middleware support"
requires-python = ">=3.12"

authors = [
    {name = "Reky"},
    {name = "GPT5 dari voucher Shopee VIP"},
    {name = "Claude Sonnet 4 & 3.7 Thinking"},
]

dependencies = [
    "python-dotenv>=1.0.0",
    "paho-mqtt>=1.6.1",
    "SQLAlchemy>=2.0.23",
    "aiomysql>=0.2.0",
    "IPython>=8.20.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.1"]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "commitizen>=3.12.0",
]
all = ["redis>=5.0.1"]

[project.scripts]
routemq = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "commitizen>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "bootstrap", "core", "generators"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.1"
tag_format = "v$version"