[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "routemq"
version = "0.18.0"
description = "A flexible MQTT routing framework with middleware support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

authors = [
    {name = "Naufal Reky Ardhana", email = "rekyardhana029@gmail.com"},
]

keywords = [
    "mqtt",
    "routing",
    "framework",
    "middleware",
    "async",
    "queue",
    "redis",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "paho-mqtt>=2.0.0",
    "SQLAlchemy>=2.0.23",
    "aiomysql>=0.2.0",
    "IPython>=8.20.0",
    "nest-asyncio>=1.5.8",
    "psutil>=5.9.6"
]

[project.optional-dependencies]
redis = ["redis>=5.0.1"]
cli = [
    "questionary>=2.0.0",
    "rich>=14.0.0",
    "rich-pyfiglet>=1.0.0",
    "jinja2>=3.1.0",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "commitizen>=3.12.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "coverage>=7.6.0",
    "bandit>=1.8.0",
    "pip-audit>=2.8.0",
    "pre-commit>=4.0.0",
    "build>=1.2.0",
    "cyclonedx-bom>=5.2.0",
    "testcontainers[redis,mysql,mqtt]>=4.14.2,<5",
    "questionary>=2.0.0",
    "rich>=14.0.0",
    "rich-pyfiglet>=1.0.0",
    "jinja2>=3.1.0",
]
all = [
    "redis>=5.0.1",
    "questionary>=2.0.0",
    "rich>=14.0.0",
    "rich-pyfiglet>=1.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
routemq = "routemq.cli:main"

[project.entry-points."routemq.queue_drivers"]
redis = "routemq.queue.redis_queue:RedisQueue"
database = "routemq.queue.database_queue:DatabaseQueue"

[project.entry-points."routemq.middleware"]

[project.urls]
Homepage = "https://github.com/ardzz/RouteMQ"
Repository = "https://github.com/ardzz/RouteMQ"
Documentation = "https://github.com/ardzz/RouteMQ/tree/master/docs"
Changelog = "https://github.com/ardzz/RouteMQ/blob/master/CHANGELOG.md"
Issues = "https://github.com/ardzz/RouteMQ/issues"
Security = "https://github.com/ardzz/RouteMQ/security/policy"

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "commitizen>=3.12.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "coverage>=7.6.0",
    "bandit>=1.8.0",
    "pip-audit>=2.8.0",
    "pre-commit>=4.0.0",
    "build>=1.2.0",
    "cyclonedx-bom>=5.2.0",
    "testcontainers[redis,mysql,mqtt]>=4.14.2,<5",
    "questionary>=2.0.0",
    "rich>=14.0.0",
    "rich-pyfiglet>=1.0.0",
    "jinja2>=3.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["routemq", "bootstrap"]

[tool.hatch.build.targets.wheel.force-include]
"routemq/scaffold/templates/base/.env" = "routemq/scaffold/templates/base/.env"

[tool.hatch.build.targets.sdist.force-include]
"routemq/scaffold/templates/base/.env" = "routemq/scaffold/templates/base/.env"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.17.1"
version_provider = "uv"
tag_format = "v$version"
legacy_tag_formats = ["$version"]
major_version_zero = true
update_changelog_on_bump = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E731",  # existing lambda baseline; tighten after structural refactor sprint
    "W291",  # existing whitespace baseline; enforce via future formatting sprint
    "W292",  # existing newline baseline; enforce via future formatting sprint
    "W293",  # existing blank-line whitespace baseline; enforce via future formatting sprint
    "F401",  # existing unused-import baseline; tighten after cleanup sprint
    "F811",  # existing redefinition baseline in smoke tests; tighten after cleanup sprint
    "F541",  # existing f-string baseline; tighten after cleanup sprint
    "F841",  # existing unused-variable baseline; tighten after cleanup sprint
]

# TODO: tighten baseline ignores and enable isort (I), bugbear (B), comprehensions (C4)
# after the dedicated formatting/type-cleanup sprint. Sprint 01 only installs gates.

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
exclude = ["docs/"]
explicit_package_bases = true
namespace_packages = true
disable_error_code = ["assignment", "union-attr", "valid-type", "misc", "call-overload"]

[tool.coverage.run]
source = ["routemq", "app", "bootstrap"]
command_line = "run_tests.py"
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
    "routemq/cli.py",
    "app/jobs/example_*.py",
    "app/controllers/example_*.py",
    "app/middleware/example_*.py",
    "app/routers/example_*.py",
]

[tool.coverage.report]
fail_under = 93
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "docs", "scripts", ".venv"]
skips = ["B101", "B404", "B603", "B607"]
